# MyCalendar

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  run_tests.sh  start.sh  stop.sh
.github/workflows/: main.yml
MyCalendar/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  api_urls.py  auth_urls.py  models.py  tests.py  urls.py
core/common/: __init__.py  min_generator.py  segment_union.py  tests.py
core/migrations/: 0001_initial.py  0002_delete_user_user.py
core/views/: auth_views.py  create_views.py  info_views.py  timetable_views.py  update_views.py
