[tool.poetry]
name = "mycalendar"
version = "0.1.0"
description = "Simple Calendar (aka Google Calendar)"
authors = ["Dmitrii Proskurin <dimapr117@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
asgiref = "3.5.0"
"backports.zoneinfo" = "0.2.1"
click = "8.1.2"
Django = "4.0.4"
mypy-extensions = "0.4.3"
pathspec = "0.9.0"
platformdirs = "2.5.2"
sqlparse = "0.4.2"
tomli = "2.0.1"
typing-extensions = "4.2.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
